Update description of string's -n option.

PR 28632
	* strings.c (usage): Update desciption of -n option.
	* doc/binutils.texi: Likewise.